--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -36,6 +36,10 @@
                     <li><a href="#">ORDINA</a></li>
                     <li><a href="#">CONTATTACI</a></li>
                   </ul>
+                   <div class="btn">
+                    <a class="b1" href="#popup1">Login</a>
+                    <a class="b1" href="#popup2">Register</a>
+                  </div>
 			</div>
 		</header>
 		
