--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -3,7 +3,7 @@
 <head th:fragment="headerfiles(title)">
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Pizza Revolution</title>
+	<title th:text="${title}"></title>
 	<link rel="shortcut icon" href="images/pizza_icon.ico" />
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,14 +31,14 @@
 				</div>
 				  <ul class="nav">
                     <li><a href="#">LA PIZZA</a></li>
-                    <li><a href="#">CHI SIAMO</a></li>
+                    <li><a th:href="@{/chisiamo}">CHI SIAMO</a></li>
                     <li><a href="#">MENU</a></li>
                     <li><a href="#">ORDINA</a></li>
-                    <li><a href="#">CONTATTACI</a></li>
+                    <li><a th:href="@{/contattaci}">CONTATTACI</a></li>
                   </ul>
                    <div class="btn">
-                    <a class="b1" href="#popup1">Login</a>
-                    <a class="b1" href="#popup2">Register</a>
+                    <a class="b1"  th:href="@{/login}">Login</a>
+                    <a class="b1" th:href="@{/register}">Register</a>
                   </div>
 			</div>
 		</header>
