--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerfiles(title)">
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title th:text="${title}"></title>
 	<link rel="shortcut icon" href="images/pizza_icon.ico" />
@@ -27,7 +27,7 @@
 		<header th:fragment="header">
 			<div class="wrapper">
 				<div class="logo">
-                    <img src="images/logo2.png"/>
+                    <a th:href="@{/index}"><img  src="images/logo2.png"/></a>
 				</div>
 				  <ul class="nav">
                     <li><a href="#">LA PIZZA</a></li>
@@ -37,7 +37,7 @@
                     <li><a th:href="@{/contattaci}">CONTATTACI</a></li>
                   </ul>
                    <div class="btn">
-                    <a class="b1"  th:href="@{/login}">Login</a>
+                    <a class="b1" href="#login">Login</a>
                     <a class="b1" th:href="@{/register}">Register</a>
                   </div>
 			</div>
