--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,30 +17,8 @@
 </div>
 <div class="background">
 </div>
-<div id="popup1" class="overlay1">
-      
-        <div class="login">
-          <div class="head-login">
-          <img src="images/avatar.png" alt=""></div>
-          <form th:action="@{/login}"  method="POST">
-          <div class="credentials">
-              <div class="group1">
-          <div class="username">
-              <input type="text" placeholder="Enter Username" name="username" required>
-          </div>
-          <div class="password">
-              <input type="password" placeholder="Enter Password" name="password" required>
-          </div>
-      </div>
-      </div>
-      <div class="end-part">
-      <button type="submit" class="btn_login" >Login</button></div>
-        <a class="close" href="#">&times;</a>
-        </form>
-      </div>
-      
-    </div>
-    
+
+    <div th:replace="loginForm :: login">modal</div>
     
 <div class="first">
     <div class="img">
