--- a/src/main/resources/templates/registerUser.html
+++ b/src/main/resources/templates/registerUser.html
@@ -9,9 +9,9 @@
 <body>
 <div class="bgded">
 <header th:replace="fragments/base.html :: header"></header>
-   <div class="overlay2">
-      
-      <div class="login-r">
+
+   <div id="register" class="overlay2">
+       <div class="login-r">
         <div class="head-login">
         <img src="images/avatar.png" alt=""></div>
         
