--- a/src/main/resources/templates/fragments/default.html
+++ b/src/main/resources/templates/fragments/default.html
@@ -29,9 +29,7 @@
 					
 				</div>
 				  <ul class="nav">
-                    <li><a href="#">LA PIZZA</a></li>
-                    <li><a href="#">CHI SIAMO</a></li>
-                    <li><a href="#">MENU</a></li>
+                    <li><a href="#">LA NOSTRA PIZZA</a></li>
                     <li><a href="#">ORDINA</a></li>
                     <li><a href="#">CONTATTACI</a></li>
                   </ul>
