--- a/src/main/resources/templates/fragments/default.html
+++ b/src/main/resources/templates/fragments/default.html
@@ -30,7 +30,7 @@
 				</div>
 				  <ul class="nav">
                     <li><a href="#">LA NOSTRA PIZZA</a></li>
-                    <li><a href="#">ORDINA</a></li>
+                    <li><a th:href="@{menu}">ORDINA</a></li>
                     <li><a href="#">CONTATTACI</a></li>
                   </ul>
                   <div class="btn">
