--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-	<link th:href="@{/css/default.css}" rel="stylesheet">
+	<link th:href="@{/css/admin.css}" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,9 @@
 				</div>
 				  <ul class="nav">
                     <li><a href="#">LA NOSTRA PIZZA</a></li>
-                    <li><a th:href="@{ordine}">ORDINA</a></li>
+                    <li><a >FATTORINI</a></li>
+                    <li><a th:href="@{/newpizza}">NUOVA PIZZA</a></li>
+                    <li><a th:href="@{/menu}">MENU</a></li>
                     <li><a href="#">CONTATTACI</a></li>
                   </ul>
                   <div class="btn">
@@ -73,7 +75,6 @@
                 <li><a href="#">Chi Siamo</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Ordina</a></li>
-                <li><a href="#">Contattaci</a></li>
               </ul>
       </div>
 
