--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -136,6 +136,10 @@ body{
 .credentials .p{
     margin-top: 70px;
 }
+
+.credentials h6{
+	font-size: 20px;
+}
 .credentials  input,.credentials  textarea{
     text-transform: capitalize;
     width: 90%;
@@ -148,6 +152,20 @@ body{
     font-size: 20px;
     color: white;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+	-webkit-text-fill-color: rgb(255, 255, 255);
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-out 0s;
+}
+
 .credentials input::placeholder{
     color: white;
     opacity: 0.7;
