--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -99,15 +99,15 @@
 </style>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head  th:replace="fragments/admin.html :: headerfiles(title='Menu')">  
+<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link th:href="@{/css/style.css}" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<header th:replace="fragments/admin.html :: header"></header>
+
+		<header th:replace="fragments/base.html :: header"></header>
   <div class="container-menu">
     <div class="menu">
       <h2 class="menu-group-heading">
