--- a/src/main/resources/templates/menuForm.html
+++ b/src/main/resources/templates/menuForm.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head  th:replace="fragments/base.html :: headerfiles(title='Menu')">  
+<head  th:replace="fragments/default.html :: headerfiles(title='Menu')">  
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link th:href="@{/css/style.css}" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<header th:replace="fragments/base.html :: header"></header>
+<div th:if="${role}=='ADMIN'">
+		<header th:replace="fragments/admin.html :: header"></header>
+	</div>
+	<div th:unless="${role}=='ADMIN'">
+	<header th:replace="fragments/default.html :: header"></header>
+	</div>
+	
+<div th:replace="accountOption :: modal">modal</div>
 <form th:action="@{/ordine}" method="POST" th:object="${ordine}">
 
 <select hidden="true " th:field="*{cliente}" required>
@@ -38,7 +44,7 @@
          <div class="add">
               
             <input type="checkbox" checked="checked"  th:field="*{pizze}"
-            			th:value="${p.id}" th:text="${p.nome}"/>
+            			th:value="${p.id}"/>
           </div>
         </div>
             
