--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -281,7 +281,7 @@ header {
 	background-color: rgba(0,0,0,.5);
 	width: 100%;
 	position: fixed;
-  z-index: 2;
+  	z-index: 2;
   
 }
 .wrapper{
@@ -699,5 +699,61 @@ header {
       width: 125px;
       height: 125px;
     }
+    
+    *{
+    padding: 0;
+    margin: 0;
+}
+
+html, body{
+    overflow-x: hidden;
+}
+
+.area,.box{
+    display: flex;
+    flex-direction: column;
+}
+
+.nav{
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+}
+
+.box .immagine{
+    margin-top: 2%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+.box .titolo{
+    text-align: center;
+    font-size: 22px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+.box .introduzione{
+    font-size: 17px;
+    padding: 4%;
+    padding-left: 20%;
+    background-color: black;
+    color: white;
+}
+.box .storia{
+    font-size: 18px;
+    padding: 4%;
+    padding-left: 20%;
+    background-color: orange;
+    color: black;
+}
+.box .gustalo{
+    font-size: 18px;
+    padding: 4%;
+    padding-left: 20%;
+    background-color: white;
+    color: black;
+    /* border: 3px solid brown; */
+}
   }
+  
+  
   
