--- a/src/main/resources/templates/suppli.html
+++ b/src/main/resources/templates/suppli.html
@@ -1,16 +1,13 @@
-<html>
-    
-    <head>
-        <title>Supplì</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head  th:replace="fragments/base.html :: headerfiles(title='suppli')">  
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
+</head>
     <body>
+    
+    <header th:replace="fragments/base.html :: header"></header>
         <div class="area">
-
-            <div class="nav">
-                <img src="images/logo2.png">
-            </div>
 
             <div class="box">
 
