--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -37,7 +37,7 @@
 				<div class="total">
 				  <ul class="nav">
                     <li><a href="#">LA PIZZA</a></li>
-                    <li><a th:href="@{pippo}">SUPPLI</a></li>
+                    <li><a th:href="@{suppli}">SUPPLI</a></li>
                     <li><a th:href="@{menu}">MENU</a></li>
                     <li><a href="#">ORDINA</a></li>
                     <li><a th:href="@{/contattaci}">CONTATTACI</a></li>
