--- a/src/main/resources/templates/suppli.html
+++ b/src/main/resources/templates/suppli.html
@@ -1,60 +1,102 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head  th:replace="fragments/base.html :: headerfiles(title='suppli')">  
-<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
-</head>
+	
+	<head  th:replace="fragments/base.html :: headerfiles(title='suppli')">  
+		<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+	  	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+	  	<script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
+	</head>
+    
     <body>
     
-    <header th:replace="fragments/base.html :: header"></header>
+    	<header th:replace="fragments/base.html :: header"></header>
+
         <div class="area">
-
-            <div class="box">
-
-                <div class="box immagine">
-                    <img src="images/suppli.jpg">
-                </div>
-
-                <div class="box titolo">
-                    <h1>Il vero <i>supplì</i> al telefono</h1>
-                </div>
-
-                <div>
-                    <div class="box introduzione">
-                        <h3>Eppure… noi lo sappiamo e lo sapete anche voi: la vera star del nostro bancone è lui, il supplì.</h3>
-                        <br>
-                        <p>Una panatura sottile e croccante, un ripieno di riso al ragù con un sugo corposo e appena acidulo e un cuore di mozzarella calda e filante:</p>
-                        <p>vi consigliamo di gustarlo appena fatto, quando scotta ancora e gli ingredienti tutti insieme emanano un profumo che è una sinfonia.</p>
-                        <p>Passate da noi e vi possiamo giurare che dimenticherete gli incubi causati dai minuscoli supplì surgelati che avete trovato altrove.</p>
-                        <br>
-                        <h4>Da noi, il supplì è una cosa seria, serissima.</h4>
-                        <br>
-                        <p>D’altra parte il supplì è un pezzo della storia gastronomica romana e, come buona parte della nostra tradizione culinaria,</p>
-                        <p>nasce come piatto popolare: semplice, gustoso, povero.</p>
-                        <br>
-                    </div>
-                    <div class="box storia">
-                        <h3>Breve storia</h4>
-                        <br>
-                        <p>Se ne comincia a parlare nella seconda metà dell’Ottocento: Roma era straripante di soldati napoleonici,</p>
-                        <p>che assaggiata la specialità iniziarono a definirla <b>surprise</b>,</p>
-                        <p>perché dentro quella rossa polpetta di riso scoprivano la mozzarella bianca e filante.</p>
-                        <p>Da surprise a supplì il passo è stato breve nel dialetto romanesco e questo è rimasto il nome della nostra polpetta di riso romana.</p>
-                        <br>
-                    </div>
-                    <div class="box gustalo">
-                        <h3>Venite a gustarlo!</h3>
-                        <br>
-                        <p>Da Pizza Revolution potete gustare il vero supplì al telefono,</p>
-                        <p><b><i>quando lo spezzate in due un filo bianco di mozzarella terrà unite le cornette.</i></b></p>
-                        <p>Mangiatelo tenendolo in un tovagliolino e non provate nemmeno a chiederci un coltello e una forchetta,</p>
-                        </p>il vero supplì si mangia a mozzichi!</p>
-                    </div>
-                </div>
-
-            </div>
-
-        </div> 
+	       	<div class="immagine">
+				<img src="images/suppli.jpg">
+			</div>
+			<div class="titolo">
+				<h1>Il vero <i>supplì</i> al telefono</h1>
+			</div>
+			<div>
+				<div class="introduzione">
+					<div class="titolo">
+						<h3>Eppure… noi lo sappiamo e lo sapete anche voi: la vera star del nostro bancone è lui, il supplì.</h3>
+					</div>
+					<br><hr><br>
+					<p>Una panatura sottile e croccante, un ripieno di riso al ragù con un sugo corposo e appena acidulo e un cuore di mozzarella calda e filante:</p>
+					<p>vi consigliamo di gustarlo appena fatto, quando scotta ancora e gli ingredienti tutti insieme emanano un profumo che è una sinfonia.</p>
+					<p>Passate da noi e vi possiamo giurare che dimenticherete gli incubi causati dai minuscoli supplì surgelati che avete trovato altrove.</p>
+					<br>
+					<h4>Da noi, il supplì è una cosa seria, serissima.</h4>
+					<br>
+					<p>D’altra parte il supplì è un pezzo della storia gastronomica romana e, come buona parte della nostra tradizione culinaria,</p>
+					<p>nasce come piatto popolare: semplice, gustoso, povero.</p>
+					<br>
+				</div>
+				<div class="storia">
+					<h3>Breve storia</h4>
+					<br><hr><br>
+					<p>Se ne comincia a parlare nella seconda metà dell’Ottocento: Roma era straripante di soldati napoleonici,</p>
+					<p>che assaggiata la specialità iniziarono a definirla <b>surprise</b>,</p>
+					<p>perché dentro quella rossa polpetta di riso scoprivano la mozzarella bianca e filante.</p>
+					<p>Da surprise a supplì il passo è stato breve nel dialetto romanesco e questo è rimasto il nome della nostra polpetta di riso romana.</p>
+					<br>
+				</div>
+				<div class="gustalo">
+					<h3>Venite a gustarlo!</h3>
+					<br><hr><br>
+					<p>Da Pizza Revolution potete gustare il vero supplì al telefono,</p>
+					<p><b><i>quando lo spezzate in due un filo bianco di mozzarella terrà unite le cornette.</i></b></p>
+					<p>Mangiatelo tenendolo in un tovagliolino e non provate nemmeno a chiederci un coltello e una forchetta,</p>
+					</p>il vero supplì si mangia a mozzichi!</p>
+				</div>
+			</div>
+		</div> 
+		
+		<footer th:fragment="footer">
+			<div class="footer">
+				<div class="footer-content">
+					<div class="footer-section about">
+						<h1 class="logo-text">Pizza Revolution</h1>
+						<p>Qualcosa....</p>
+						<div class="contact">
+							<span><i class="fas fa-phone"></i> &nbsp; (+39) 356-323-2351</span>
+							<span><i class="fas fa-envelope"></i> &nbsp; PizzaR@gmail.com.com</span>
+						</div>
+						<div class="socials">
+							<a href="https://www.facebook.com/pizzarevolutionpleonardo/"><i class="fab fa-facebook"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-twitter"></i></a>
+							<a href="#"><i class="fab fa-youtube"></i></a>
+						</div>
+					</div>
+					<div class="footer-section links">
+						<h2>Quick Links</h2>
+						<br>
+						<ul>
+						<li><a href="#">La Pizza</a></li>
+						<li><a href="#">Chi Siamo</a></li>
+						<li><a href="#">Menu</a></li>
+						<li><a href="#">Ordina</a></li>
+						<li><a href="#">Contattaci</a></li>
+						</ul>
+					</div>
+					<form action="" class="footer-section newsletter">
+						<h2>Subscribe Our Newsletter & Join US</h2>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<div class="newsletter-box">
+							<i class="fas fa-envelope"></i>
+							<input class="emailbox" type="email" name="" value="" placeholder="Enter your email id">
+							<button type="button" name="button">Subscribe</button>
+						</div>
+					</form>
+				</div>
+	          	<div class="footer-bottom">
+					© PizzaRevolution.com | by Angi S.R.L.
+				</div>
+	       	</div>
+	    </footer>
+	    
     </body>
     
 </html>
